--- a/inicio_estudiante.css
+++ b/inicio_estudiante.css
@@ -492,11 +492,11 @@ input, select {
 }
 /* Mover la tabla de información general hacia la derecha */
 .header-table {
-    margin-left: 150px;
+    margin-left: 0%;
     width: 80%; /* Ajusta el ancho según necesites */
 }
 .header-tbody {
-    margin-left: 150px;
+    margin-left: 50px;
     width: 80%; /* Ajusta el ancho según necesites */
 }
 /* Alinear el contenido de la tabla al centro y moverla hacia la derecha */
@@ -504,3 +504,7 @@ input, select {
     margin-left: 10%;
     max-width: 90%;
 }
+.col-md-8 {
+    margin-left: 20%;
+    max-width: 80%;
+}   
